--- a/Desktop/flutter_ex/instargram/pubspec.yaml
+++ b/Desktop/flutter_ex/instargram/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   http: ^0.13.4
   image_picker: ^0.8.8+4
   shared_preferences: ^2.0.11
+  provider: ^6.0.1
+  flutter_local_notifications: ^9.1.5
 
 
   # The following adds the Cupertino Icons font to your application.
