feat : camera 연동 완료

--- a/Desktop/flutter_ex/deegolabs/ios/Runner/Info.plist
+++ b/Desktop/flutter_ex/deegolabs/ios/Runner/Info.plist
@@ -47,5 +47,10 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+    <key>NSCameraUsageDescription</key>
+    <string>Camera permission is required.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Microphone permission is required.</string>
 </dict>
 </plist>
