--- a/Desktop/flutter_ex/deegolabs/pubspec.yaml
+++ b/Desktop/flutter_ex/deegolabs/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   camera: ^0.10.5+3
+  naver_map_plugin:
+    git: https://github.com/LBSTECH/naver_map_plugin.git
+  flutter_naver_map: ^1.0.2
 
 dev_dependencies:
   flutter_test:
