--- a/Desktop/flutter_ex/deegolabs/pubspec.yaml
+++ b/Desktop/flutter_ex/deegolabs/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
     git: https://github.com/LBSTECH/naver_map_plugin.git
   flutter_naver_map: ^1.0.2
   flutter_naver_login: ^1.6.0
+  kakao_flutter_sdk: ^1.5.0
 
 dev_dependencies:
   flutter_test:
