--- a/Desktop/flutter_ex/deegolabs/android/app/src/main/AndroidManifest.xml
+++ b/Desktop/flutter_ex/deegolabs/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,16 @@
         android:label="deegolabs"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <activity android:name="com.kakao.sdk.flutter.AuthCodeCustomTabsActivity">
+            <intent-filter android:label="flutter_web_auth">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <!-- Redirect URI, "kakao${YOUR_NATIVE_APP_KEY}://oauth" 형식 -->
+                <data android:scheme="kakao413db6c1481faf48ecd19af7a9b474e4" android:host="oauth"/>
+            </intent-filter>
+        </activity>
         <activity
             android:name="MainActivity"
             android:exported="true"
